Revert "Merge branch '44-expand-units' into 'master'"
This reverts merge request !51