@@ -1,21 +1,14 @@
 package dinnerium.core;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Map;
+import java.util.List;
 
 
 public class Quantity {
 
-    private static final Map<String, Collection<String>> units = Map.of(
-        "volume", new ArrayList<>(Arrays.asList(
-            "l", "dl", "ts", "ss")),
-        "weight", new ArrayList<>(Arrays.asList(
-            "g", "kg")),
-        "count", new ArrayList<>(Arrays.asList(
-            "stk", "dusin"))
-    );
+    // the static final list is supposed to contain all (!) units imaginable.
+    // Will be expanded for next assignment
+    public static final List<String> units =
+            List.of("stk", "dl", "gram");
     private double amount;
     private String unit;
 
@@ -39,12 +32,7 @@ public class Quantity {
      * @return true if valid
      */
     private boolean validateUnit(String unit) {
-        for(Collection<String> c : units.values()) {
-            if(c.contains(unit)) {
-                return true;
-            }
-        }
-        return false;
+        return units.contains(unit);
     }
 
     /**
